--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -13,20 +13,25 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.11"]
+        module: ["sha1"]
 
     steps:
       - uses: actions/checkout@v3
+      
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      
       - name: Format with black
         run: |
           black tb --check
-      - name: Test with pytest
+      
+      - name: Run ${{ matrix.module }} model tests
         run: |
-          pytest tb/model -s
+          pytest tb/${{ matrix.module }}/model -s
