--- a/.github/workflows/regression.yaml
+++ b/.github/workflows/regression.yaml
@@ -17,17 +17,21 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.11"]
+        module: ["sha1"]
 
     steps:
       - uses: actions/checkout@v3
+     
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      
       - name: Install verilator
         run: |
           sudo apt install -y --no-install-recommends help2man make g++ perl python3 autoconf flex bison libfl2 libfl-dev
@@ -39,6 +43,6 @@ jobs:
           make -j $(nproc)
           sudo make install
          
-      - name: Test with pytest
+      - name: Run ${{ matrix.module }} cocotb tests
         run: |
-          ITERATIONS=${{ env.ITERATIONS }} pytest tb -s --ignore=tb/model
+          ITERATIONS=${{ env.ITERATIONS }} pytest tb/${{ matrix.module }} -s --ignore=tb/${{ matrix.module }}/model
