--- a/.github/workflows/regression.yaml
+++ b/.github/workflows/regression.yaml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.11"]
-        module: ["sha1"]
+        module: ["interface", "sha1"]
 
     steps:
       - uses: actions/checkout@v3
