--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.11"]
-        module: ["sha1"]
+        module: ["sha1", "sha256"]
 
     steps:
       - uses: actions/checkout@v3
