Extend sha2 cocotb tests for sha512
Only one test file is used to run the tests on sha2 algorithms,
i.e. sha256 and sha512 cores. Pytest parameters are used to change
the RTL module to be tested.

--- a/tb/sha2/makefile
+++ b/tb/sha2/makefile
@@ -12,7 +12,7 @@ SHA_DIRECTORY = $(shell dirname $(TB_DIRECTORY))/hw/sha256
 TOPLEVEL = sha256_core
 
 # Test to simulate
-MODULE = test_core
+MODULE = test_sha2_cores
 
 # Pointing to the verilog files to test
 VERILOG_SOURCES = $(SHA_DIRECTORY)/sha256_core.sv
