Add sha1 RTL and testbenches
A SHA-1 RTL core is introduced as well as corresponding tests.

Fixes #3, #24

--- a/tb/sha1/makefile
+++ b/tb/sha1/makefile
@@ -6,23 +6,18 @@ SIM = verilator
 # Directories definition
 SHA_TB_DIRECTORY = $(shell pwd)
 TB_DIRECTORY = $(shell dirname $(SHA_TB_DIRECTORY))
-ITF_DIRECTORY = $(shell dirname $(TB_DIRECTORY))/hw/interface
 SHA_DIRECTORY = $(shell dirname $(TB_DIRECTORY))/hw/sha1
 
 # Default verilog file to test
-TOPLEVEL = sha1
+TOPLEVEL = sha1_core
 
 # Test to simulate
-MODULE = test_top
+MODULE = test_sha1_core
 
 # Pointing to the verilog files to test
-VERILOG_SOURCES = $(SHA_DIRECTORY)/sha1.sv $(ITF_DIRECTORY)/simple_reg_interface.sv
-
-### Testbench arguments
-ITERATIONS := 10 # Number of random tests ran
+VERILOG_SOURCES = $(SHA_DIRECTORY)/sha1_core.sv
 
 # Verilator extra arguments to build waves
-EXTRA_ARGS += --trace --trace-structs
+EXTRA_ARGS += --trace --trace-structs -Wno-WIDTH
 
 include $(shell cocotb-config --makefiles)/Makefile.sim
-
