--- a/tb/interface/makefile
+++ b/tb/interface/makefile
@@ -1,3 +1,7 @@
+# Copyright 2023 @ cryptopen contributors 
+# Licensed under the Apache License, Version 2.0, see LICENSE for details.
+# SPDX-License-Identifier: Apache-2.0
+
 # Cocotb makefile
 
 TOPLEVEL_LANG = verilog
