Clean up FPGA development flow
The overall FPGA flow is cleansed and commented. So far only
synthesis and implementation flows are supported until a generic
top level is developed for bitstream generation.

--- a/fpga/Makefile
+++ b/fpga/Makefile
@@ -1,8 +1,8 @@
-# Copyright 2023 - cryptopen contributors 
+# Copyright 2023 @ cryptopen contributors 
 # Licensed under the Apache License, Version 2.0, see LICENSE for details.
 # SPDX-License-Identifier: Apache-2.0
 
-# board name for bitstream generation. Currently supported: genesys2
+# Board name for synthesis and implementation
 BOARD       ?= spartan7
 # Top level module to compile
 TOP_LEVEL   ?= sha256
@@ -14,10 +14,10 @@ mkfile_path := $(abspath $(lastword $(MAKEFILE_LIST)))
 fpga-dir := $(dir $(mkfile_path))
 root-dir := $(fpga-dir)..
 
-work-dir := work-dir
-hw-dir  := $(root-dir)/hw
-itf-dir := $(hw-dir)/interface
-acc-dir := $(hw-dir)/$(TOP_LEVEL)
+scripts-dir := $(fpga-dir)/scripts
+hw-dir      := $(root-dir)/hw
+itf-dir     := $(hw-dir)/interface
+acc-dir     := $(hw-dir)/$(TOP_LEVEL)
 
 acc_src := $(acc-dir)/$(TOP_LEVEL).sv \
            $(acc-dir)/$(TOP_LEVEL)_core.sv
@@ -38,28 +38,29 @@ else
 $(error Unknown board - supported: genesys2, spartan7)
 endif
 
-ifeq ($(filter $(INTERFACE), simple apb),)
-$(error Unknown interface protocol - supported: simple, apb)
+_supported_itf = simple
+
+ifeq ($(filter $(INTERFACE), $(_supported_itf)),)
+$(error Unknown interface protocol - supported: $(_supported_itf))
 endif
 
 VIVADO ?= vivado
-VIVADOFLAGS ?= -nojournal -mode batch -source scripts/project.tcl
+VIVADOFLAGS ?= -nojournal -mode batch -source $(scripts-dir)/project.tcl
 
 fpga:
 	@echo "[FPGA] Generate sources"
-	@echo read_verilog -sv {$(acc_src)} > scripts/read_rtl_sources.tcl
-	@echo read_verilog -sv {$(itf_src)} >> scripts/read_rtl_sources.tcl
+	@echo read_verilog -sv {$(acc_src)} > $(scripts-dir)/read_rtl_sources.tcl
+	@echo read_verilog -sv {$(itf_src)} >> $(scripts-dir)/read_rtl_sources.tcl
 	@echo "[FPGA] Run synthesis, implementation and generate bitstream"
-	mkdir -p $(work-dir)
 	TOP_LEVEL=$(TOP_LEVEL) \
 	BOARD=$(BOARD) XILINX_PART=$(XILINX_PART) \
 	XILINX_BOARD=$(XILINX_BOARD) CLK_PERIOD_NS=$(CLK_PERIOD_NS) \
-	$(VIVADO) $(VIVADOFLAGS) -source scripts/run.tcl
+	$(VIVADO) $(VIVADOFLAGS) -source $(scripts-dir)/run.tcl
 
 .PHONY: fpga
 
 clean:
-	rm -rf *.log *.jou *.str *.mif *.xpr $(work-dir) cryptopen.cache cryptopen.hw cryptopen.ip_user_files scripts/vivado*
+	rm -rf *.log *.jou *.str *.mif *.xpr cryptopen.cache cryptopen.hw cryptopen.ip_user_files $(scripts-dir)/vivado*
 	rm -rf cryptopen.hbs cryptopen.runs
 	rm -rf reports
-	rm -f scripts/read_rtl_sources.tcl
+	rm -f $(scripts-dir)/read_rtl_sources.tcl
