Generic top-levels testbench structure
Add a cocotb testbench that can be used to test all IPs.
The structure set in place relies on bus and models used in lower
levels testbenches.

--- a/.github/workflows/regression.yaml
+++ b/.github/workflows/regression.yaml
@@ -60,3 +60,7 @@ jobs:
       - name: Run sha2 cocotb test suite
         run: |
           pytest tb/sha2 -vs --ignore=tb/sha2/model
+
+      - name: Run all IPs top-level test suite
+        run: |
+          pytest tb/test_tops.py -vs
