Remove Verilator Width waiver
The RTL improvements on word memory fixed the Width warning given
by verilator.

Fixes #56

--- a/tb/sha1/makefile
+++ b/tb/sha1/makefile
@@ -22,6 +22,6 @@ MODULE = test_sha1_core
 VERILOG_SOURCES = $(SHA_DIRECTORY)/sha1_core.sv
 
 # Verilator extra arguments to build waves
-EXTRA_ARGS += --trace --trace-structs -Wno-WIDTH
+EXTRA_ARGS += --trace --trace-structs
 
 include $(shell cocotb-config --makefiles)/Makefile.sim
