Check parameters before running FPGA flow
RTL parameters and IPs top level needs to be in certain ranges.
A small bash scripts make sure these ranges are respected before
running vivado with the Tcl scripts.

--- a/fpga/Makefile
+++ b/fpga/Makefile
@@ -65,6 +65,7 @@ TCLARGS = -tclargs \
 		  digest_width=$(DIGEST_WIDTH)
 
 fpga:
+	@bash $(scripts-dir)/checker.sh $(TOP_LEVEL) $(DIGEST_WIDTH) $(DATA_WIDTH) $(ADDR_WIDTH) $(BYTE_ALIGN)
 	@echo "[FPGA] Generate sources"
 	@echo read_verilog -sv {$(fpga_src)} > $(scripts-dir)/read_rtl_sources.tcl
 	@echo "[FPGA] Run synthesis, implementation and generate bitstream"
