Add top-level generic tests
Using the core Driver, cocotb tests are now used to compute random
messages of varying size and test it against models results.

--- a/.github/workflows/regression.yaml
+++ b/.github/workflows/regression.yaml
@@ -63,4 +63,4 @@ jobs:
 
       - name: Run all IPs top-level test suite
         run: |
-          pytest tb/test_tops.py -vs
+          ITERATIONS=${{ env.ITERATIONS }} pytest tb/test_tops.py -vs
