--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r tb/requirements.txt
       
       - name: Format with black
         run: |
